--- a/quiz.html
+++ b/quiz.html
@@ -296,56 +296,44 @@
       }
     }
 
-    /* Quiz page stickers */
+    /* Quiz page stickers - Same as home page */
     .page-header {
       position: relative;
       overflow: visible;
     }
 
-    .quiz-sticker {
-      position: absolute;
-      width: 65px;
-      height: 65px;
-      object-fit: contain;
-      opacity: 0.85;
-      filter: drop-shadow(2px 4px 6px rgba(0,0,0,0.2));
-      pointer-events: none;
-      z-index: 1;
-      animation: quiz-bounce 3s ease-in-out infinite;
-    }
-
-    @keyframes quiz-bounce {
-      0%, 100% { transform: translateY(0) rotate(var(--rotate, 0deg)); }
-      50% { transform: translateY(-8px) rotate(var(--rotate, 0deg)); }
-    }
-
-    .quiz-sticker--1 { top: 5px; left: 3%; --rotate: -10deg; animation-delay: 0s; }
-    .quiz-sticker--2 { top: 15px; right: 3%; --rotate: 12deg; animation-delay: 0.5s; }
-
-    /* Quiz section stickers */
     .quiz-wrapper {
       position: relative;
     }
 
-    .quiz-area-sticker {
+    /* Floating Stickers - Same as home page */
+    .sticker {
       position: absolute;
-      width: 55px;
-      height: 55px;
+      width: 70px;
+      height: 70px;
       object-fit: contain;
-      opacity: 0.7;
-      filter: drop-shadow(2px 3px 5px rgba(0,0,0,0.15));
-      pointer-events: none;
-      z-index: 0;
+      opacity: 0.9;
+      animation: float 4s ease-in-out infinite;
+      filter: drop-shadow(3px 5px 8px rgba(0,0,0,0.25));
+      pointer-events: auto;
+      z-index: 2;
+      cursor: pointer;
     }
 
-    .quiz-area-sticker--1 { top: 20px; left: -40px; transform: rotate(-15deg); }
-    .quiz-area-sticker--2 { top: 150px; right: -35px; transform: rotate(10deg); }
-    .quiz-area-sticker--3 { bottom: 80px; left: -45px; transform: rotate(8deg); }
-    .quiz-area-sticker--4 { bottom: 20px; right: -40px; transform: rotate(-12deg); }
+    @keyframes float {
+      0%, 100% { transform: scale(1.1) translateY(0) rotate(0deg); }
+      50% { transform: scale(1.1) translateY(-12px) rotate(3deg); }
+    }
+
+    .sticker--1 { top: 5px; left: 3%; animation-delay: 0s; width: 65px; height: 65px; }
+    .sticker--2 { top: 15px; right: 3%; animation-delay: 0.5s; width: 60px; height: 60px; }
+    .sticker--3 { top: 20px; left: -40px; animation-delay: 1s; width: 55px; height: 55px; }
+    .sticker--4 { top: 150px; right: -35px; animation-delay: 1.5s; width: 55px; height: 55px; }
+    .sticker--5 { bottom: 80px; left: -45px; animation-delay: 2s; width: 55px; height: 55px; }
+    .sticker--6 { bottom: 20px; right: -40px; animation-delay: 2.5s; width: 55px; height: 55px; }
 
     @media (max-width: 768px) {
-      .quiz-sticker,
-      .quiz-area-sticker {
+      .sticker {
         display: none;
       }
     }
@@ -404,10 +392,10 @@
   </header>
 
   <!-- Page Header -->
-  <section class="section section--sm page-header">
+  <section class="section section--sm page-header page-header--quiz">
     <!-- Quiz Header Stickers -->
-    <img src="images/animal sticks/opossumsticker.PNG" alt="" class="quiz-sticker quiz-sticker--1" aria-hidden="true">
-    <img src="images/animal sticks/hyenasticker.PNG" alt="" class="quiz-sticker quiz-sticker--2" aria-hidden="true">
+    <img src="images/animal sticks/opossumsticker.PNG" alt="" class="sticker sticker--1" aria-hidden="true">
+    <img src="images/animal sticks/hyenasticker.PNG" alt="" class="sticker sticker--2" aria-hidden="true">
 
     <div class="container">
       <h1 class="text-center mb-md">Test Your Knowledge</h1>
@@ -426,10 +414,10 @@
   <section class="section">
     <div class="container quiz-wrapper">
       <!-- Quiz Area Stickers -->
-      <img src="images/animal sticks/batsticker.PNG" alt="" class="quiz-area-sticker quiz-area-sticker--1" aria-hidden="true">
-      <img src="images/animal sticks/wolfsticker.PNG" alt="" class="quiz-area-sticker quiz-area-sticker--2" aria-hidden="true">
-      <img src="images/animal sticks/ratsticker.PNG" alt="" class="quiz-area-sticker quiz-area-sticker--3" aria-hidden="true">
-      <img src="images/animal sticks/snakesticker.PNG" alt="" class="quiz-area-sticker quiz-area-sticker--4" aria-hidden="true">
+      <img src="images/animal sticks/batsticker.PNG" alt="" class="sticker sticker--3" aria-hidden="true">
+      <img src="images/animal sticks/wolfsticker.PNG" alt="" class="sticker sticker--4" aria-hidden="true">
+      <img src="images/animal sticks/ratsticker.PNG" alt="" class="sticker sticker--5" aria-hidden="true">
+      <img src="images/animal sticks/snakesticker.PNG" alt="" class="sticker sticker--6" aria-hidden="true">
 
       <div class="quiz-container">
         <div id="quiz-progress" class="text-center mb-xl">
