editted submit page background

--- a/submit.html
+++ b/submit.html
@@ -533,7 +533,7 @@
   </section>
 
   <!-- Submit Form -->
-  <main class="section" role="main" style="background: var(--color-bg); padding-top: 0;">
+  <main class="section" role="main" style="padding-top: 0;">
     <div class="submit-form-wrapper">
       <!-- Decorative Stickers -->
       <img src="images/animal sticks/vulturesticker.PNG" alt="" class="form-sticker form-sticker--1" aria-hidden="true">
