Change the Lets go button direction

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <div class="hero-content">
           <h1 class="hero__title">Scary? Nope. Just Misunderstood!</h1>
           <p class="hero__subtitle">These animals aren't as scary as you think. Ready to find out why they're actually awesome?</p>
-          <a href="browse.html" class="btn btn--outline btn-pill" style="align-self: flex-start;">Let's Go! 🚀</a>
+          <a href="#habitat-map" class="btn btn--outline btn-pill" style="align-self: flex-start;">Let's Go! 🚀</a>
         </div>
         <div class="hero-image-container">
           <div class="hero-slideshow" id="hero-slideshow">
